# test_ket

./: Makefile  README.md  sats.csv
test1/: pyproject.toml
test1/test1/: test1.ket
test1/tests/: test_test1.py
test2/: pyproject.toml
test2/test2/: test2.ket
